--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sondaggio Menù (30 giorni)</title>
+  <title>Menù Giornaliero</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <main class="container">
     <header class="header">
-      <h1>Sondaggio Menù</h1>
+      <h1>Menù Giornaliero</h1>
       <p>Seleziona una data: verrà caricato il menù del <b>giorno del mese (1–30)</b>.</p>
     </header>
 
@@ -77,7 +77,7 @@
         </div>
 
         <div class="actions">
-          <button id="submitBtn" type="submit">Invia a Discord</button>
+          <button id="submitBtn" type="submit">Invia</button>
           <button id="resetBtn" type="button" class="secondary">Reset</button>
         </div>
 
@@ -100,7 +100,7 @@
               <textarea id="feedbackText" rows="4" placeholder="Es. Aggiungere un pulsante per..."></textarea>
             </div>
             <div class="actions">
-              <button id="sendFeedbackBtn" type="submit">Invia suggerimento</button>
+              <button id="sendFeedbackBtn" type="submit">Invia</button>
               <button id="clearFeedbackBtn" type="button" class="secondary">Pulisci</button>
             </div>
             <p id="feedbackStatus" class="status" aria-live="polite"></p>
@@ -117,7 +117,7 @@
               <small class="mutedText">Puoi scrivere più piatti separati da virgole o andare a capo.</small>
             </div>
             <div class="actions">
-              <button id="sendDishBtn" type="submit">Invia piatti</button>
+              <button id="sendDishBtn" type="submit">Invia</button>
               <button id="clearDishBtn" type="button" class="secondary">Pulisci</button>
             </div>
             <p id="dishStatus" class="status" aria-live="polite"></p>
@@ -127,7 +127,7 @@
     </section>
 
     <footer class="footer">
-      <small>Menù 30 giorni — ingredienti da magazzino.</small>
+      <small>Menù 30 giorni — ingredienti da frigorifero.</small>
     </footer>
   </main>
 
